// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchRecords page renders error alert if error occurs during search 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <Alert
        alertId="alert-error"
        allowDismiss={false}
        customIcon={null}
        customType={null}
        disableAlertClick={false}
        dismissTitle="Click to dismiss this alert"
        message="Error has occurred during request and request cannot be processed. Please contact eSpace administrators or try again later."
        pushToTop={true}
        showLoader={false}
        title="Error"
        type="error_outline"
        wiggle={null}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page renders loading screen while export publications loading 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should parse properly when activeFacets.showOpenAccessOnly is not present in url 1`] = `
Object {
  "activeFacets": Object {
    "filters": Object {},
    "ranges": Object {},
    "test1": "test2",
  },
  "pageSize": 20,
  "sortBy": "score",
  "sortDirection": "Desc",
}
`;

exports[`SearchRecords page should render advanced search component 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={true}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while export publications loading 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={true}
      xs={true}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <span>
              Searching for works
            </span>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={true}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              sortBy="score"
              sortDirection="Desc"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
          >
            <WithStyles(InlineLoader)
              message="Exporting search results"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(PublicationsListPaging)
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while loading publications while filtering 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={true}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(InlineLoader)
        message="Searching for works"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={true}
      xs={true}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <span>
              Searching for works
            </span>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={true}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              sortBy="score"
              sortDirection="Desc"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={true}
              loading={true}
              onPageChanged={[Function]}
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          container={true}
          justify="center"
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
          >
            <WithStyles(InlineLoader)
              message="Searching for works"
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(PublicationsListPaging)
          disabled={true}
          loading={true}
          onPageChanged={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render loading screen while loading search results 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={true}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <WithStyles(InlineLoader)
        message="Searching for works"
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render no results 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render placeholders 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should render when paging 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={true}
      xs={true}
    >
      <StandardCard
        noHeader={true}
      >
        <WithStyles(ForwardRef(Grid))
          container={true}
          spacing={2}
        >
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <span>
              Displaying works 10 to 20 of 100 total works. 
            </span>
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListSorting)
              disabled={false}
              onExportPublications={[Function]}
              onPageSizeChanged={[Function]}
              onSortByChanged={[Function]}
              pageSize={20}
              pagingData={
                Object {
                  "from": 10,
                  "to": 20,
                  "total": 100,
                }
              }
              sortBy="score"
              sortDirection="Desc"
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))
            item={true}
            xs={12}
          >
            <WithStyles(PublicationsListPaging)
              disabled={false}
              loading={false}
              onPageChanged={[Function]}
              pagingData={
                Object {
                  "from": 10,
                  "to": 20,
                  "total": 100,
                }
              }
            />
          </WithStyles(ForwardRef(Grid))>
        </WithStyles(ForwardRef(Grid))>
        <div
          style={
            Object {
              "marginTop": 16,
            }
          }
        >
          <PublicationsList
            hideCountDiff={false}
            publicationsList={
              Array [
                1,
                2,
              ]
            }
            publicationsListSubset={Array []}
            showAdminActions={false}
            showDefaultActions={false}
            showMetrics={false}
            showSourceCountIcon={false}
            showSources={false}
            showUnpublishedBufferFields={false}
            subsetCustomActions={Array []}
          />
        </div>
        <WithStyles(PublicationsListPaging)
          disabled={false}
          loading={false}
          onPageChanged={[Function]}
          pagingData={
            Object {
              "from": 10,
              "to": 20,
              "total": 100,
            }
          }
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should run constructor without valid search location 1`] = `
Object {
  "activeFacets": Object {
    "filters": Object {},
    "ranges": Object {},
  },
  "advancedSearchFields": Array [],
  "page": 1,
  "pageSize": 20,
  "sortBy": "score",
  "sortDirection": "Desc",
}
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets OA selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "showOpenAccessOnly": true,
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets filter selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {
                "Display type": 179,
              },
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if activeFacets range selected (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "ranges": Object {
                "Year published": Object {
                  "from": 2015,
                  "to": 2018,
                },
              },
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if publicationsListFacets returned (even if there are no results) 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={3}
      >
        <WithStyles(StandardRighthandCard)
          title="Refine results"
        >
          <Memo(FacetsFilter)
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Scopus document type",
                "Genre",
                "Year published",
                "Published year range",
              ]
            }
            facetsData={
              Object {
                "Another facet": 2,
                "Some facet": 1,
              }
            }
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
            showOpenAccessFilter={true}
          />
        </WithStyles(StandardRighthandCard)>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;

exports[`SearchRecords page should show available filters or selected filters if publicationsListFacets returned (even if there are no results) and should exclude facets from advanced search field 1`] = `
<StandardPage
  className="page-search-records"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        className="searchComponent"
        noHeader={true}
      >
        <withRouter(Connect(SearchComponent))
          activeFacets={
            Object {
              "filters": Object {},
              "ranges": Object {},
            }
          }
          facetsChanged={[Function]}
          isAdvancedSearch={false}
          isUnpublishedBufferPage={false}
          searchLoading={false}
          showAdvancedSearchButton={true}
          updateFacetExcludesFromSearchFields={[Function]}
        />
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={12}
    >
      <StandardCard
        text={
          <div>
            We were unable to find any results.
          </div>
        }
        title="No works found"
      >
        <div>
          We were unable to find any results.
        </div>
      </StandardCard>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={3}
      >
        <WithStyles(StandardRighthandCard)
          title="Refine results"
        >
          <Memo(FacetsFilter)
            activeFacets={
              Object {
                "filters": Object {},
                "ranges": Object {},
              }
            }
            disabled={false}
            excludeFacetsList={
              Array [
                "Author",
              ]
            }
            facetsData={
              Object {
                "Another facet": 2,
                "Some facet": 1,
              }
            }
            lookupFacetsList={
              Object {
                "Author": "Author (lookup)",
                "Collection": "Collection (lookup)",
                "Subject": "Subject (lookup)",
              }
            }
            onFacetsChanged={[Function]}
            renameFacetsList={
              Object {
                "Display type": "Work type",
                "Subtype": "Work subtype",
              }
            }
            showOpenAccessFilter={true}
          />
        </WithStyles(StandardRighthandCard)>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</StandardPage>
`;
